[package]
name = "atlas-rs"
version = "0.3.0"
edition = "2021"
authors = ["Ollivier Robert <roberto@keltia.net>"]
repository = "https://github.com/keltia/atlas-rs"
license = "MIT"
readme = "README.md"
keywords = ["atlas", "ripe-atlas", "library", "REST-API", "client-library"]
description = "Rust library to access RIPE Atlas probes API."
categories = ["api-bindings" ]

# features = ["flat-api", "alt-api"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3", features = ["cargo", "derive"] }
home = "0.5"
itertools = "0.10"
lazy-regex = "2.2"
regex = "1.5"
reqwest = { version = "0", features = ["socks", "blocking", "gzip", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

[dev-dependencies]
rstest = "0.11.0"
assert_cmd = "2"
