[workspace]
members = ["atlas-api", "atlas-cli"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["cargo", "derive"] }
home = "0.5"
itertools = "0.12"
lazy-regex = "3.1"
log = { version = "0.4", features = ["std", "serde"] }
regex = "1.7"
reqwest = { version = "0.11", features = ["socks", "blocking", "gzip", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stderrlog = "0.5"
toml = "0.8"
rstest = "0.18"
