[package]
name = "atlas-api"
version = "0.3.0"
edition = "2021"
authors = ["Ollivier Robert <roberto@keltia.net>"]
repository = "https://github.com/keltia/atlas-rs"
license = "MIT"
readme = "README.md"
keywords = ["atlas", "ripe-atlas", "library", "REST-API", "client-library"]
description = "Rust library to access RIPE Atlas probes API."
categories = ["api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["cargo"] }
home = "0.5.4"
itertools = "0.10.5"
lazy-regex = "2.3.1"
log = { version = "0.4.17", features = ["std", "serde"] }
regex = "1.7.0"
reqwest = { version = "0.11.12", features = ["socks", "blocking", "gzip", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
stderrlog = "0.5.4"

[dev-dependencies]
rstest = "0.15.0"
assert_cmd = "2.0.6"
