[package]
name = "atlas-api"
version = "0.3.0"
edition = "2021"
authors = ["Ollivier Robert <roberto@keltia.net>"]
repository = "https://github.com/keltia/atlas-rs"
license = "MIT"
readme = "README.md"
keywords = ["atlas", "ripe-atlas", "library", "REST-API", "client-library"]
description = "Rust library to access RIPE Atlas probes API."
categories = ["api-bindings"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
home.workspace = true
itertools.workspace = true
lazy-regex.workspace = true
log.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
stderrlog.workspace = true

[dev-dependencies]
rstest.workspace = true
