[package]
name = "atlas-cli"
version = "0.4.0"
edition = "2021"
authors = ["Ollivier Robert <roberto@keltia.net>"]
repository = "https://github.com/keltia/atlas-rs"
license = "MIT"
readme = "README.md"
keywords = ["atlas", "ripe-atlas", "REST-API", "CLI"]
description = "Rust library to access RIPE Atlas probes API."
categories = ["command-line-utilities"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlas-api = { path = "../atlas-api", version = "0.3.0" }
anyhow.workspace = true
clap.workspace = true
home.workspace = true
itertools.workspace = true
lazy-regex.workspace = true
log.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
stderrlog.workspace = true
toml.workspace = true

[dev-dependencies]
rstest.workspace = true
assert_cmd = "2.0"
